package com.pseandroid2.dailydataserver.onlineDatabase;

import com.pseandroid2.dailydataserver.RequestParameter;
import com.pseandroid2.dailydataserver.onlineDatabase.requestParameters.fetchRequestController.DemandOldDataParameter;
import org.springframework.web.bind.annotation.*;

import java.util.ArrayList;
import java.util.List;

/**
 * interface for "talking" about old data
 * the user can post request for old Data und can get request for a project to help other participants
 * #TODO Testen, JavaDoc
 */
@RestController
@RequestMapping("/OnlineDatabase/request")
public class FetchRequestController {

    /**
     * Saves a request for old Data by the user.
     * Another participant can fetch such requests.
     *
     * @param user        the user, who needs old Data, generated by the server.
     * @param projectID   the project to which the request belongs, provided by the client
     */
    @PostMapping("/need/{id}")
    public void demandOldData(@RequestAttribute String user, @PathVariable("id") long projectID, @RequestBody DemandOldDataParameter param) {

    }

    /**
     * @param user      the user, who wants the requests, generated by the server.
     * @param projectId the project, to which the requests belong, provided by the client
     * @return a list of FetchRequests, which contains the user, who needs the delta, the project and the requestInfo.
     */

    @GetMapping("/provide/{id}")
    public List<ProjectParticipants> getFetchRequests(@RequestAttribute String user, @PathVariable("id") long projectId, @RequestBody RequestParameter param) {

        return new ArrayList<ProjectParticipants>();
    }
}
