package com.pseandroid2.dailydataserver.onlineproject;

/**
 * #TODO JavaDoc
 */

public enum Role {

    PARTICIPANT,
    ADMIN
}
